--- a/FirstProjectASP/FirstProjectASP.csproj
+++ b/FirstProjectASP/FirstProjectASP.csproj
@@ -6,4 +6,10 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="NLog.Config" Version="4.7.15" />
+      <PackageReference Include="NLog.Extensions.Logging" Version="5.3.11" />
+      <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.11" />
+    </ItemGroup>
+
 </Project>
